2D Stabilization: Rotation not working with very long tracks #67876

Closed
opened 2019-07-29 10:14:53 +02:00 by Otto Struve · 4 comments

System Information
Operating system: Ubuntu 16.04
Graphics card:

Blender Version
Broken: Blender 2.80 rc3
Worked: (optional)

Short description of error
In 2D Stabilization the images/movie is not rotated, although "Show Stable" option is enabled and 2 tracks are set for stabilization and rotation/scale respectively. The same holds for the output when using the 2d stabilization node in the compositor. The resolution of the images is 4k (3940x2160). Rotation works when using the same image sequence but with shorter tracks (tested with a track length of about 20 frames).
bug_report.blend

Exact steps for others to reproduce the error
In the attached .blend file, two tracks are present. The image sequence is, of course, not included, but I guess any other movie will do. The image sequence is 918 frames long. When playing back the movie, it should rotate (especially at the end where the markers are rotating 90 degrees around each other). "Show Stable" is enabled and tracks for stabilization and rotation are set.

Thank you very much.

**System Information** Operating system: Ubuntu 16.04 Graphics card: **Blender Version** Broken: Blender 2.80 rc3 Worked: (optional) **Short description of error** In 2D Stabilization the images/movie is not rotated, although "Show Stable" option is enabled and 2 tracks are set for stabilization and rotation/scale respectively. The same holds for the output when using the 2d stabilization node in the compositor. The resolution of the images is 4k (3940x2160). Rotation works when using the same image sequence but with shorter tracks (tested with a track length of about 20 frames). [bug_report.blend](https://archive.blender.org/developer/F7634835/bug_report.blend) **Exact steps for others to reproduce the error** In the attached .blend file, two tracks are present. The image sequence is, of course, not included, but I guess any other movie will do. The image sequence is 918 frames long. When playing back the movie, it should rotate (especially at the end where the markers are rotating 90 degrees around each other). "Show Stable" is enabled and tracks for stabilization and rotation are set. Thank you very much.
Author

Added subscriber: @flacknaneek

Added subscriber: @flacknaneek

This issue was referenced by 92f6e60f46

This issue was referenced by 92f6e60f46b4f4db04a3b9a49b9429a027148ee7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2019-07-29 12:30:57 +02:00
Author

Works perfectly. Thank you very much!

Works perfectly. Thank you very much!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67876
No description provided.